# parallel-conway

./: Cargo.toml  README.md
src/: app.rs  array.rs  cli.rs  life.rs  main.rs  state.rs
